--- a/campaign_service/src/main/resources/application.properties
+++ b/campaign_service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 
-spring.datasource.username=admin_viewer
+spring.datasource.username=admin
 spring.datasource.password=password
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
