--- a/campaign_service/src/main/resources/application.properties
+++ b/campaign_service/src/main/resources/application.properties
@@ -14,5 +14,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 server.port=9000
+grpc.server.port=9100
 
 logging.level.root=info
