--- a/stats_service/src/main/resources/application.properties
+++ b/stats_service/src/main/resources/application.properties
@@ -14,5 +14,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 server.port=9001
+grpc.server.port=9101
 
 logging.level.root=info
