Config made. Time for debugging :(

--- a/campaign_service/src/main/resources/application.properties
+++ b/campaign_service/src/main/resources/application.properties
@@ -16,4 +16,7 @@ spring.sql.init.mode=always
 server.port=9000
 grpc.server.port=9100
 
+grpc.client.stats-service.address=static://localhost:9100
+grpc.client.stats-service.negotiationType=plaintext
+
 logging.level.root=info
