--- a/stats_service/src/main/resources/application.properties
+++ b/stats_service/src/main/resources/application.properties
@@ -16,4 +16,7 @@ spring.sql.init.mode=always
 server.port=9001
 grpc.server.port=9101
 
+grpc.client.campaign-service.address=static://localhost:9100
+grpc.client.campaign-service.negotiationType=plaintext
+
 logging.level.root=info
