--- a/campaign_service/pom.xml
+++ b/campaign_service/pom.xml
@@ -85,6 +85,16 @@
             <artifactId>grpc-stub</artifactId>
             <version>1.69.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
