--- a/campaign_service/src/main/resources/application.properties
+++ b/campaign_service/src/main/resources/application.properties
@@ -13,10 +13,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
+jwt.secret=VGhpcy1pcy1teS1zZWN1cmUta2V5LTI1Ni1iaXRzLWxvbmc=
+
 server.port=9000
 grpc.server.port=9100
 
 grpc.client.stats-service.address=static://localhost:9101
 grpc.client.stats-service.negotiationType=plaintext
 
+
+
 logging.level.root=info
+logging.level.org.springframework.security=DEBUG
